--- a/plugin.xml
+++ b/plugin.xml
@@ -32,11 +32,12 @@
 
   <!-- android -->
   <platform name="android">
-    <config-file target="config.xml" parent="/*">
+    <!-- Support with cordova-plugin-androidx plugin to keep support for cordova-android 8 -->
+    <!-- <config-file target="config.xml" parent="/*">
       <platform name="android">
         <preference name="AndroidXEnabled" value="true" />
       </platform>
-    </config-file>
+    </config-file> -->
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="Fingerprint">
@@ -73,7 +74,7 @@
   </platform>
 
   <engines>
-    <engine name="cordova-android" version=">=9.0.0" />
+    <engine name="cordova-android" version=">=8.0.0" />
   </engines>
 
 </plugin>
